# kubeproto

./: .clang-format  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  go.work.sum  kube.pb.go  kube.proto
apis/appsv1/: BUILD.bazel  appsv1_kubeproto.generated.object.go
apis/batchv1/: BUILD.bazel  batchv1_kubeproto.generated.object.go
apis/corev1/: BUILD.bazel  corev1_kubeproto.generated.object.go
bazel/: BUILD.bazel  def.bzl  protobuf.bzl
bazel/crd/: def.bzl
bazel/go/: BUILD.bazel
cmd/gen-go-to-protobuf/: BUILD.bazel  main.go
cmd/protoc-gen-client/: BUILD.bazel  main.go
cmd/protoc-gen-crd/: BUILD.bazel  main.go
cmd/protoc-gen-deepcopy/: BUILD.bazel  main.go
cmd/protoc-gen-object/: BUILD.bazel  main.go
cmd/protoc-gen-register/: BUILD.bazel  main.go
cmd/protoc-gen-testing-client/: BUILD.bazel  main.go
example/: Makefile  go.mod  go.sum
example/crd/: BUILD.bazel  blog.crd.yaml  github.crd.yaml
example/pkg/apis/: BUILD.bazel  github.generated.deepcopy.go  github.generated.register.go  github.proto  import.go  test_test.go
example/pkg/apis/blogv1alpha1/: BUILD.bazel  blog.proto  blog_proto_kubeproto.generated.object.go
example/pkg/apis/blogv1alpha2/: BUILD.bazel  blog.proto  blog_proto_kubeproto.generated.object.go  test_test.go
example/pkg/apis/githubv1alpha1/: BUILD.bazel  github.generated.deepcopy.go  github.generated.register.go  github.proto  github_proto_kubeproto.generated.deepcopy.go  github_proto_kubeproto.generated.object.go  test_test.go
example/pkg/apis/githubv1alpha2/: BUILD.bazel  github.generated.deepcopy.go  github.generated.register.go  github.proto  github_proto_kubeproto.generated.deepcopy.go  github_proto_kubeproto.generated.object.go  github_proto_kubeproto.generated.register.go
example/pkg/apis/miniov1alpha1/: BUILD.bazel  minio.proto  minio_proto_kubeproto.generated.deepcopy.go  minio_proto_kubeproto.generated.object.go
example/pkg/client/: BUILD.bazel  github.generated.client.go  k8s.generated.client.go
example/pkg/client/testingclient/: BUILD.bazel  github.generated.testingclient.go  k8s.generated.testingclient.go
example/pkg/thirdpartyclient/: BUILD.bazel  thirdpartyclient.generated.client.go
example/pkg/thirdpartyclient/testingthirdpartyclient/: BUILD.bazel  testingthirdpartyclient.generated.testingclient.go
go/apis/admissionregistrationv1/: BUILD.bazel  admissionregistrationv1_kubeproto.generated.object.go
go/apis/admissionv1/: BUILD.bazel  admissionv1_kubeproto.generated.object.go
go/apis/apidiscoveryv2beta1/: BUILD.bazel  apidiscoveryv2beta1_kubeproto.generated.object.go
go/apis/appsv1/: BUILD.bazel  appsv1_kubeproto.generated.object.go
go/apis/authenticationv1/: BUILD.bazel  authenticationv1_kubeproto.generated.object.go
go/apis/authorizationv1/: BUILD.bazel  authorizationv1_kubeproto.generated.object.go
go/apis/autoscalingv1/: BUILD.bazel  autoscalingv1_kubeproto.generated.object.go
go/apis/autoscalingv2/: BUILD.bazel  autoscalingv2_kubeproto.generated.object.go
go/apis/batchv1/: BUILD.bazel  batchv1_kubeproto.generated.object.go
go/apis/certificatesv1/: BUILD.bazel  certificatesv1_kubeproto.generated.object.go
go/apis/coordinationv1/: BUILD.bazel  coordinationv1_kubeproto.generated.object.go
go/apis/corev1/: BUILD.bazel  corev1_kubeproto.generated.object.go  util.go
go/apis/discoveryv1/: BUILD.bazel  discoveryv1_kubeproto.generated.object.go
go/apis/eventsv1/: BUILD.bazel  eventsv1_kubeproto.generated.object.go
go/apis/metav1/: BUILD.bazel  metav1_kubeproto.generated.object.go  util.go
go/apis/networkingv1/: BUILD.bazel  networkingv1_kubeproto.generated.object.go
go/apis/policyv1/: BUILD.bazel  policyv1_kubeproto.generated.object.go
go/apis/rbacv1/: BUILD.bazel  rbacv1_kubeproto.generated.object.go
go/apis/resourcev1/: BUILD.bazel  resourcev1_kubeproto.generated.object.go
go/apis/schedulingv1/: BUILD.bazel  schedulingv1_kubeproto.generated.object.go
go/apis/storagev1/: BUILD.bazel  storagev1_kubeproto.generated.object.go
go/internal/assertion/: BUILD.bazel  error.go
go/k8sclient/: BUILD.bazel  core.go  discovery.go  go_client.generated.client.go  portforward.go
go/k8stestingclient/: BUILD.bazel  discovery.go  go_testingclient.generated.testingclient.go  test_test.go
internal/: BUILD.bazel  import.go
internal/codegeneration/: BUILD.bazel  writer.go
internal/definition/: BUILD.bazel  enum.go  enum_test.go  lister.go  message.go  nsmanager.go
internal/goparser/: BUILD.bazel  parser.go  parser_test.go  protobuf.go
internal/k8s/: BUILD.bazel  client.go  crd.go  deepcopy.go  object.go  register.go  testingclient.go
internal/object/: BUILD.bazel  deepcopy.go  message.go  writer.go
internal/stringsutil/: BUILD.bazel  strings.go  strings_test.go
k8s.io/api/admission/v1/: BUILD.bazel  generated.proto
k8s.io/api/admissionregistration/v1/: BUILD.bazel  generated.proto
k8s.io/api/apidiscovery/v2beta1/: BUILD.bazel  generated.proto
k8s.io/api/apps/v1/: BUILD.bazel  generated.proto
k8s.io/api/authentication/v1/: BUILD.bazel  generated.proto
k8s.io/api/authorization/v1/: BUILD.bazel  generated.proto
k8s.io/api/autoscaling/v1/: BUILD.bazel  generated.proto
k8s.io/api/autoscaling/v2/: BUILD.bazel  generated.proto
k8s.io/api/batch/v1/: BUILD.bazel  generated.proto
k8s.io/api/certificates/v1/: BUILD.bazel  generated.proto
k8s.io/api/coordination/v1/: BUILD.bazel  generated.proto
k8s.io/api/core/v1/: BUILD.bazel  generated.proto
k8s.io/api/discovery/v1/: BUILD.bazel  generated.proto
k8s.io/api/events/v1/: BUILD.bazel  generated.proto
k8s.io/api/networking/v1/: BUILD.bazel  generated.proto
k8s.io/api/policy/v1/: BUILD.bazel  generated.proto
k8s.io/api/rbac/v1/: BUILD.bazel  generated.proto
k8s.io/api/resource/v1/: BUILD.bazel  generated.proto
k8s.io/api/scheduling/v1/: BUILD.bazel  generated.proto
k8s.io/api/storage/v1/: BUILD.bazel  generated.proto
k8s.io/apimachinery/: BUILD.bazel
k8s.io/apimachinery/pkg/runtime/: BUILD.bazel  generated.proto
sigs.k8s.io/gateway-api/apis/v1/: BUILD.bazel  (+1 more)
(+22 files in other folders)
