# gazelle:prefix go.f110.dev/kubeproto
# gazelle:proto disable_global
# gazelle:resolve go go.f110.dev/kubeproto //:kubeproto_lib

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "k8s_proto",
    srcs = glob(["k8s.io/**/*.proto"]),
    visibility = ["//visibility:public"],
    deps = [
        ":kubeproto",
        "//k8s.io/api/core/v1:corev1_proto",
        "//k8s.io/api/apps/v1:appsv1_proto",
    ],
)

proto_library(
    name = "sigs_gateway_api_proto",
    srcs = glob(["sigs.k8s.io/gateway-api/**/*.proto"]),
    visibility = ["//visibility:public"],
    deps = [
        ":k8s_proto",
        ":kubeproto",
    ],
)

proto_library(
    name = "kubeproto",
    srcs = ["kube.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

go_proto_library(
    name = "kubeproto_go_proto",
    importpath = "go.f110.dev/kubeproto",
    protos = [":kubeproto"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kubeproto_lib",
    srcs = ["kube.pb.go"],
    importpath = "go.f110.dev/kubeproto",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/google.golang.org/protobuf/reflect/protoreflect",
        "//vendor/google.golang.org/protobuf/runtime/protoimpl",
        "//vendor/google.golang.org/protobuf/types/descriptorpb",
    ],
)
