# gazelle:prefix go.f110.dev/kubeproto
# gazelle:proto disable_global
# gazelle:resolve go go.f110.dev/kubeproto //:kubeproto_lib
# gazelle:exclude example

load("@gazelle//:def.bzl", "gazelle")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

gazelle(name = "gazelle")

proto_library(
    name = "k8s_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":kubeproto",
        "//k8s.io/api/admission/v1:admissionv1_proto",
        "//k8s.io/api/admissionregistration/v1:admissionregistrationv1_proto",
        "//k8s.io/api/apidiscovery/v2beta1:apidiscoveryv2beta1_proto",
        "//k8s.io/api/apps/v1:appsv1_proto",
        "//k8s.io/api/authentication/v1:authenticationv1_proto",
        "//k8s.io/api/authorization/v1:authorizationv1_proto",
        "//k8s.io/api/autoscaling/v1:autoscalingv1_proto",
        "//k8s.io/api/autoscaling/v2:autoscalingv2_proto",
        "//k8s.io/api/batch/v1:batchv1_proto",
        "//k8s.io/api/certificates/v1:certificatesv1_proto",
        "//k8s.io/api/coordination/v1:coordinationv1_proto",
        "//k8s.io/api/core/v1:corev1_proto",
        "//k8s.io/api/discovery/v1:discoveryv1_proto",
        "//k8s.io/api/events/v1:eventsv1_proto",
        "//k8s.io/api/networking/v1:networkingv1_proto",
        "//k8s.io/api/policy/v1:policyv1_proto",
        "//k8s.io/api/rbac/v1:rbacv1_proto",
        "//k8s.io/api/scheduling/v1:schedulingv1_proto",
        "//k8s.io/api/storage/v1:storagev1_proto",
        "//k8s.io/apimachinery/pkg/apis/meta/v1:metav1_proto",
        "//k8s.io/apimachinery/pkg/util/intstr:intstr_proto",
    ],
)

proto_library(
    name = "sigs_gateway_api_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":kubeproto",
        "//sigs.k8s.io/gateway-api/apis/v1alpha2:v1alpha2_proto",
    ],
)

proto_library(
    name = "kubeproto",
    srcs = ["kube.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:descriptor_proto",
    ],
)

go_proto_library(
    name = "kubeproto_go_proto",
    importpath = "go.f110.dev/kubeproto",
    protos = [":kubeproto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "kubeproto_lib",
    srcs = ["kube.pb.go"],
    importpath = "go.f110.dev/kubeproto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
