load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

go_proto_compiler(
    name = "deepcopy",
    options = ["plugins=deepcopy"],
    plugin = "//cmd/protoc-gen-deepcopy",
    suffix = ".generated.deepcopy.go",
    visibility = ["//visibility:public"],
    deps = [],
)

go_proto_compiler(
    name = "register",
    options = ["plugins=register"],
    plugin = "//cmd/protoc-gen-register",
    suffix = ".generated.register.go",
    visibility = ["//visibility:public"],
    deps = [],
)

go_proto_compiler(
    name = "crd",
    options = ["plugins=crd"],
    plugin = "//cmd/protoc-gen-crd",
    suffix = ".crd.yaml",
    visibility = ["//visibility:public"],
)
