load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["import.go"],
    importpath = "go.f110.dev/kubeproto/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/k8s.io/api/admission/v1:admission",
        "//vendor/k8s.io/api/apps/v1:apps",
        "//vendor/k8s.io/api/batch/v1:batch",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/api/networking/v1:networking",
        "//vendor/k8s.io/api/policy/v1:policy",
        "//vendor/k8s.io/api/rbac/v1:rbac",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:apiextensions",
        "//vendor/sigs.k8s.io/gateway-api/apis/v1alpha2",
    ],
)
