load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["import.go"],
    importpath = "go.f110.dev/kubeproto/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/k8s.io/api/admission/v1:admission",
        "//vendor/k8s.io/api/admissionregistration/v1:admissionregistration",
        "//vendor/k8s.io/api/apps/v1:apps",
        "//vendor/k8s.io/api/authorization/v1:authorization",
        "//vendor/k8s.io/api/autoscaling/v1:autoscaling",
        "//vendor/k8s.io/api/autoscaling/v2:autoscaling",
        "//vendor/k8s.io/api/batch/v1:batch",
        "//vendor/k8s.io/api/certificates/v1:certificates",
        "//vendor/k8s.io/api/coordination/v1:coordination",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/api/discovery/v1:discovery",
        "//vendor/k8s.io/api/events/v1:events",
        "//vendor/k8s.io/api/networking/v1:networking",
        "//vendor/k8s.io/api/policy/v1:policy",
        "//vendor/k8s.io/api/rbac/v1:rbac",
        "//vendor/k8s.io/api/scheduling/v1:scheduling",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:apiextensions",
        "//vendor/sigs.k8s.io/gateway-api/apis/v1alpha2",
    ],
)
