load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["import.go"],
    importpath = "go.f110.dev/kubeproto/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_k8s_api//admission/v1:admission",
        "@io_k8s_api//admissionregistration/v1:admissionregistration",
        "@io_k8s_api//apidiscovery/v2beta1",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//authorization/v1:authorization",
        "@io_k8s_api//autoscaling/v1:autoscaling",
        "@io_k8s_api//autoscaling/v2:autoscaling",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//certificates/v1:certificates",
        "@io_k8s_api//coordination/v1:coordination",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//discovery/v1:discovery",
        "@io_k8s_api//events/v1:events",
        "@io_k8s_api//networking/v1:networking",
        "@io_k8s_api//policy/v1:policy",
        "@io_k8s_api//rbac/v1:rbac",
        "@io_k8s_api//scheduling/v1:scheduling",
        "@io_k8s_api//storage/v1:storage",
        "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1:apiextensions",
        "@io_k8s_sigs_gateway_api//apis/v1alpha2",
    ],
)
