load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "appsv1",
    srcs = ["appsv1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/apis/appsv1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/corev1",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr",
    ],
)
