load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "batchv1",
    srcs = ["batchv1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/apis/batchv1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/corev1",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
    ],
)
