load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-client_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/kubeproto/cmd/protoc-gen-client",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/k8s",
        "//vendor/google.golang.org/protobuf/proto",
        "//vendor/google.golang.org/protobuf/types/descriptorpb",
        "//vendor/google.golang.org/protobuf/types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-client",
    embed = [":protoc-gen-client_lib"],
    visibility = ["//visibility:public"],
)
