load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-crd_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/kubeproto/cmd/protoc-gen-crd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/k8s",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-crd",
    embed = [":protoc-gen-crd_lib"],
    visibility = ["//visibility:public"],
)
