load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-register_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/kubeproto/cmd/protoc-gen-register",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/k8s",
        "//vendor/google.golang.org/protobuf/proto",
        "//vendor/google.golang.org/protobuf/reflect/protodesc",
        "//vendor/google.golang.org/protobuf/types/descriptorpb",
        "//vendor/google.golang.org/protobuf/types/pluginpb",
    ],
)

go_binary(
    name = "protoc-gen-register",
    embed = [":protoc-gen-register_lib"],
    visibility = ["//visibility:public"],
)
