load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "protoc-gen-testing-client",
    embed = [":protoc-gen-testing-client_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "protoc-gen-testing-client_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/kubeproto/cmd/protoc-gen-testing-client",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/k8s",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)
