load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel:def.bzl", "go_client")

go_client(
    name = "go_client",
    srcs = [
        "//k8s.io/api/admission/v1:admissionv1_proto",
        "//k8s.io/api/admissionregistration/v1:admissionregistrationv1_proto",
        "//k8s.io/api/apps/v1:appsv1_proto",
        "//k8s.io/api/authentication/v1:authenticationv1_proto",
        "//k8s.io/api/authorization/v1:authorizationv1_proto",
        "//k8s.io/api/autoscaling/v1:autoscalingv1_proto",
        "//k8s.io/api/autoscaling/v2:autoscalingv2_proto",
        "//k8s.io/api/batch/v1:batchv1_proto",
        "//k8s.io/api/certificates/v1:certificatesv1_proto",
        "//k8s.io/api/coordination/v1:coordinationv1_proto",
        "//k8s.io/api/core/v1:corev1_proto",
        "//k8s.io/api/discovery/v1:discoveryv1_proto",
        "//k8s.io/api/events/v1:eventsv1_proto",
        "//k8s.io/api/networking/v1:networkingv1_proto",
        "//k8s.io/api/policy/v1:policyv1_proto",
        "//k8s.io/api/rbac/v1:rbacv1_proto",
        "//k8s.io/api/scheduling/v1:schedulingv1_proto",
        "//k8s.io/api/storage/v1:storagev1_proto",
    ],
    fqdn = True,
    importpath = "go.f110.dev/kubeproto/go/k8sclient",
    visibility = ["//visibility:public"],
)

go_library(
    name = "k8sclient",
    srcs = ["go_client.generated.client.go"],
    importpath = "go.f110.dev/kubeproto/go/k8sclient",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/admissionregistrationv1",
        "//go/apis/appsv1",
        "//go/apis/authenticationv1",
        "//go/apis/authorizationv1",
        "//go/apis/autoscalingv1",
        "//go/apis/autoscalingv2",
        "//go/apis/batchv1",
        "//go/apis/certificatesv1",
        "//go/apis/coordinationv1",
        "//go/apis/corev1",
        "//go/apis/discoveryv1",
        "//go/apis/eventsv1",
        "//go/apis/networkingv1",
        "//go/apis/policyv1",
        "//go/apis/rbacv1",
        "//go/apis/schedulingv1",
        "//go/apis/storagev1",
        "//vendor/k8s.io/apimachinery/pkg/api/errors",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/labels",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer",
        "//vendor/k8s.io/apimachinery/pkg/watch",
        "//vendor/k8s.io/client-go/rest",
        "//vendor/k8s.io/client-go/tools/cache",
    ],
)
