load("@rules_go//go:def.bzl", "go_library")
load("//bazel:def.bzl", "go_client")

go_client(
    name = "go_client",
    srcs = [
        "//k8s.io/api/admission/v1:admissionv1_proto",
        "//k8s.io/api/admissionregistration/v1:admissionregistrationv1_proto",
        "//k8s.io/api/apps/v1:appsv1_proto",
        "//k8s.io/api/authentication/v1:authenticationv1_proto",
        "//k8s.io/api/authorization/v1:authorizationv1_proto",
        "//k8s.io/api/autoscaling/v1:autoscalingv1_proto",
        "//k8s.io/api/autoscaling/v2:autoscalingv2_proto",
        "//k8s.io/api/batch/v1:batchv1_proto",
        "//k8s.io/api/certificates/v1:certificatesv1_proto",
        "//k8s.io/api/coordination/v1:coordinationv1_proto",
        "//k8s.io/api/core/v1:corev1_proto",
        "//k8s.io/api/discovery/v1:discoveryv1_proto",
        "//k8s.io/api/events/v1:eventsv1_proto",
        "//k8s.io/api/networking/v1:networkingv1_proto",
        "//k8s.io/api/policy/v1:policyv1_proto",
        "//k8s.io/api/rbac/v1:rbacv1_proto",
        "//k8s.io/api/scheduling/v1:schedulingv1_proto",
        "//k8s.io/api/storage/v1:storagev1_proto",
    ],
    fqdn = True,
    importpath = "go.f110.dev/kubeproto/go/k8sclient",
    visibility = ["//visibility:public"],
)

go_library(
    name = "k8sclient",
    srcs = [
        "discovery.go",
        "go_client.generated.client.go",
        "portforward.go",
    ],
    importpath = "go.f110.dev/kubeproto/go/k8sclient",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/admissionregistrationv1",
        "//go/apis/apidiscoveryv2beta1",
        "//go/apis/appsv1",
        "//go/apis/authenticationv1",
        "//go/apis/authorizationv1",
        "//go/apis/autoscalingv1",
        "//go/apis/autoscalingv2",
        "//go/apis/batchv1",
        "//go/apis/certificatesv1",
        "//go/apis/coordinationv1",
        "//go/apis/corev1",
        "//go/apis/discoveryv1",
        "//go/apis/eventsv1",
        "//go/apis/metav1",
        "//go/apis/networkingv1",
        "//go/apis/policyv1",
        "//go/apis/rbacv1",
        "//go/apis/schedulingv1",
        "//go/apis/storagev1",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/runtime/serializer",
        "@io_k8s_apimachinery//pkg/watch",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_client_go//tools/portforward",
        "@io_k8s_client_go//transport/spdy",
    ],
)
