load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel:def.bzl", "go_testing_client")

go_testing_client(
    name = "go_testingclient",
    srcs = [
        "//k8s.io/api/admission/v1:admissionv1_proto",
        "//k8s.io/api/admissionregistration/v1:admissionregistrationv1_proto",
        "//k8s.io/api/apps/v1:appsv1_proto",
        "//k8s.io/api/authentication/v1:authenticationv1_proto",
        "//k8s.io/api/authorization/v1:authorizationv1_proto",
        "//k8s.io/api/autoscaling/v1:autoscalingv1_proto",
        "//k8s.io/api/autoscaling/v2:autoscalingv2_proto",
        "//k8s.io/api/batch/v1:batchv1_proto",
        "//k8s.io/api/certificates/v1:certificatesv1_proto",
        "//k8s.io/api/core/v1:corev1_proto",
        "//k8s.io/api/discovery/v1:discoveryv1_proto",
        "//k8s.io/api/networking/v1:networkingv1_proto",
        "//k8s.io/api/policy/v1:policyv1_proto",
        "//k8s.io/api/rbac/v1:rbacv1_proto",
    ],
    client = "//go/k8sclient:go_client",
    importpath = "go.f110.dev/kubeproto/go/k8stestingclient",
    visibility = ["//visibility:public"],
)

go_library(
    name = "k8stestingclient",
    srcs = ["go_testingclient.generated.testingclient.go"],
    importpath = "go.f110.dev/kubeproto/go/k8stestingclient",
    visibility = ["//visibility:public"],
    deps = [
        "//go/k8sclient",
        "//vendor/k8s.io/apimachinery/pkg/api/meta",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/labels",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer",
        "//vendor/k8s.io/apimachinery/pkg/watch",
        "//vendor/k8s.io/client-go/testing",
    ],
)
