load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//bazel:def.bzl", "go_testing_client")

go_testing_client(
    name = "go_testingclient",
    srcs = [
        "//k8s.io/api/admission/v1:admissionv1_proto",
        "//k8s.io/api/admissionregistration/v1:admissionregistrationv1_proto",
        "//k8s.io/api/apps/v1:appsv1_proto",
        "//k8s.io/api/authentication/v1:authenticationv1_proto",
        "//k8s.io/api/authorization/v1:authorizationv1_proto",
        "//k8s.io/api/autoscaling/v1:autoscalingv1_proto",
        "//k8s.io/api/autoscaling/v2:autoscalingv2_proto",
        "//k8s.io/api/batch/v1:batchv1_proto",
        "//k8s.io/api/certificates/v1:certificatesv1_proto",
        "//k8s.io/api/coordination/v1:coordinationv1_proto",
        "//k8s.io/api/core/v1:corev1_proto",
        "//k8s.io/api/discovery/v1:discoveryv1_proto",
        "//k8s.io/api/events/v1:eventsv1_proto",
        "//k8s.io/api/networking/v1:networkingv1_proto",
        "//k8s.io/api/policy/v1:policyv1_proto",
        "//k8s.io/api/rbac/v1:rbacv1_proto",
        "//k8s.io/api/scheduling/v1:schedulingv1_proto",
        "//k8s.io/api/storage/v1:storagev1_proto",
    ],
    client = "//go/k8sclient:go_client",
    importpath = "go.f110.dev/kubeproto/go/k8stestingclient",
    visibility = ["//visibility:public"],
)

go_library(
    name = "k8stestingclient",
    srcs = [
        "discovery.go",
        "go_testingclient.generated.testingclient.go",
    ],
    importpath = "go.f110.dev/kubeproto/go/k8stestingclient",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/metav1",
        "//go/k8sclient",
        "@io_k8s_apimachinery//pkg/api/meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/runtime/serializer",
        "@io_k8s_apimachinery//pkg/watch",
        "@io_k8s_client_go//testing",
    ],
)

go_test(
    name = "k8stestingclient_test",
    srcs = ["test_test.go"],
    embed = [":k8stestingclient"],
    deps = [
        "//go/apis/corev1",
        "//go/apis/metav1",
        "//go/internal/assertion",
        "//go/k8sclient",
        "@io_k8s_apimachinery//pkg/labels",
    ],
)
