load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "definition",
    srcs = [
        "lister.go",
        "message.go",
    ],
    importpath = "go.f110.dev/kubeproto/internal/definition",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:kubeproto_lib",
        "//internal/stringsutil",
        "//vendor/google.golang.org/protobuf/proto",
        "//vendor/google.golang.org/protobuf/types/descriptorpb",
    ],
)
