load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "definition",
    srcs = [
        "enum.go",
        "lister.go",
        "message.go",
        "nsmanager.go",
    ],
    importpath = "go.f110.dev/kubeproto/internal/definition",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:kubeproto_lib",
        "//internal/stringsutil",
        "//vendor/google.golang.org/protobuf/proto",
        "//vendor/google.golang.org/protobuf/reflect/protoreflect",
        "//vendor/google.golang.org/protobuf/reflect/protoregistry",
        "//vendor/google.golang.org/protobuf/types/descriptorpb",
    ],
)

go_test(
    name = "definition_test",
    srcs = ["enum_test.go"],
    embed = [":definition"],
    deps = [
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/google.golang.org/protobuf/proto",
        "//vendor/google.golang.org/protobuf/types/descriptorpb",
    ],
)
