load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "definition",
    srcs = [
        "enum.go",
        "lister.go",
        "message.go",
        "nsmanager.go",
    ],
    importpath = "go.f110.dev/kubeproto/internal/definition",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:kubeproto_lib",
        "//internal/stringsutil",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_test(
    name = "definition_test",
    srcs = ["enum_test.go"],
    embed = [":definition"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
