load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "goparser",
    srcs = [
        "parser.go",
        "protobuf.go",
    ],
    importpath = "go.f110.dev/kubeproto/internal/goparser",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/codegeneration",
        "//internal/stringsutil",
    ],
)
