load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "goparser",
    srcs = [
        "parser.go",
        "protobuf.go",
    ],
    importpath = "go.f110.dev/kubeproto/internal/goparser",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/codegeneration",
        "//internal/stringsutil",
    ],
)

go_test(
    name = "goparser_test",
    srcs = ["parser_test.go"],
    embed = [":goparser"],
)
