load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "k8s",
    srcs = [
        "deepcopy.go",
        "register.go",
    ],
    importpath = "go.f110.dev/kubeproto/internal/k8s",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:kubeproto_go_proto",
        "//internal/codegeneration",
        "//internal/definition",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
    ],
)
