load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "k8s",
    srcs = [
        "client.go",
        "crd.go",
        "object.go",
        "testingclient.go",
    ],
    importpath = "go.f110.dev/kubeproto/internal/k8s",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:kubeproto_lib",
        "//internal/codegeneration",
        "//internal/definition",
        "//internal/stringsutil",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_k8s_apiextensions_apiserver//pkg/apis/apiextensions/v1:apiextensions",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//reflect/protoregistry",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)
