load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stringsutil",
    srcs = ["strings.go"],
    importpath = "go.f110.dev/kubeproto/internal/stringsutil",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_gertd_go_pluralize//:go-pluralize"],
)

go_test(
    name = "stringsutil_test",
    srcs = ["strings_test.go"],
    embed = [":stringsutil"],
    deps = ["@com_github_stretchr_testify//assert"],
)
