load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "github_proto",
    srcs = ["github.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//:k8s_proto",
        "//:kubeproto",
    ],
)

go_proto_library(
    name = "github_proto_deepcopy",
    compiler = "//bazel/go:deepcopy",
    importpath = "go.f110.dev/kubeproto/example/pkg/apis",
    proto = ":github_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//example/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
    ],
)

go_library(
    name = "apis",
    srcs = [
        "github.generated.deepcopy.go",
        "import.go",
    ],
    importpath = "go.f110.dev/kubeproto/example/pkg/apis",
    visibility = ["//visibility:public"],
    deps = ["//example/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta"],
)

go_test(
    name = "apis_test",
    srcs = ["test_test.go"],
    embed = [":apis"],
)
