load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//bazel:def.bzl", "go_client")

go_client(
    name = "k8s",
    srcs = [
        "//example/pkg/apis/blogv1alpha1:blog_proto",
        "//example/pkg/apis/blogv1alpha2:blog_proto",
    ],
    importpath = "go.f110.dev/kubeproto/example/pkg/client",
    visibility = ["//visibility:public"],
)

go_library(
    name = "client",
    srcs = ["k8s.generated.client.go"],
    importpath = "go.f110.dev/kubeproto/example/pkg/client",
    visibility = ["//visibility:public"],
    deps = [
        "//example/pkg/apis/blogv1alpha1",
        "//example/pkg/apis/blogv1alpha2",
        "//example/vendor/k8s.io/apimachinery/pkg/api/errors",
        "//example/vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//example/vendor/k8s.io/apimachinery/pkg/labels",
        "//example/vendor/k8s.io/apimachinery/pkg/runtime",
        "//example/vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//example/vendor/k8s.io/apimachinery/pkg/runtime/serializer",
        "//example/vendor/k8s.io/apimachinery/pkg/watch",
        "//example/vendor/k8s.io/client-go/rest",
        "//example/vendor/k8s.io/client-go/tools/cache",
    ],
)
