load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "admissionv1",
    srcs = ["admissionv1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/go/apis/admissionv1",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/metav1",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
    ],
)
