load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "apidiscoveryv2beta1",
    srcs = ["apidiscoveryv2beta1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/go/apis/apidiscoveryv2beta1",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/metav1",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
    ],
)
