load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "appsv1",
    srcs = ["appsv1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/go/apis/appsv1",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/corev1",
        "//go/apis/metav1",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr",
    ],
)
