load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "appsv1",
    srcs = ["appsv1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/go/apis/appsv1",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/corev1",
        "//go/apis/metav1",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/util/intstr",
    ],
)
