load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "authenticationv1",
    srcs = ["authenticationv1_kubeproto.generated.object.go"],
    importpath = "go.f110.dev/kubeproto/go/apis/authenticationv1",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apis/metav1",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
    ],
)
